--- a/src/assets/styles/mixins.scss
+++ b/src/assets/styles/mixins.scss
@@ -1,3 +1,5 @@
+@use "variables";
+
 // Flexbox mixins
 @mixin flex-center {
   display: flex;
@@ -14,25 +16,25 @@
 // Media queries
 @mixin respond-to($breakpoint) {
   @if $breakpoint == sm {
-    @media (max-width: $breakpoint-sm) {
+    @media (max-width: variables.$breakpoint-sm) {
       @content;
     }
   }
 
   @if $breakpoint == md {
-    @media (max-width: $breakpoint-md) {
+    @media (max-width: variables.$breakpoint-md) {
       @content;
     }
   }
 
   @if $breakpoint == lg {
-    @media (max-width: $breakpoint-lg) {
+    @media (max-width: variables.$breakpoint-lg) {
       @content;
     }
   }
 
   @if $breakpoint == xl {
-    @media (max-width: $breakpoint-xl) {
+    @media (max-width: variables.$breakpoint-xl) {
       @content;
     }
   }
@@ -40,47 +42,47 @@
 
 // Typography
 @mixin heading-1 {
-  font-size: $font-size-xxlarge;
+  font-size: variables.$font-size-xxlarge;
   font-weight: bold;
   line-height: 1.2;
 
   @include respond-to(md) {
-    font-size: $font-size-xlarge;
+    font-size: variables.$font-size-xlarge;
   }
 }
 
 @mixin heading-2 {
-  font-size: $font-size-xlarge;
+  font-size: variables.$font-size-xlarge;
   font-weight: bold;
   line-height: 1.3;
 
   @include respond-to(md) {
-    font-size: $font-size-large;
+    font-size: variables.$font-size-large;
   }
 }
 
 // Animations
 @mixin fade-in {
-  animation: fade-in $animation-duration ease-in;
+  animation: fade-in variables.$animation-duration ease-in;
 }
 
 @mixin scale-in {
-  animation: scale-in $animation-duration ease-in-out;
+  animation: scale-in variables.$animation-duration ease-in-out;
 }
 
 // Common styles
 @mixin card {
-  background-color: $background-color;
-  border-radius: $border-radius;
-  box-shadow: $box-shadow;
-  padding: $spacing-base;
+  background-color: variables.$background-color;
+  border-radius: variables.$border-radius;
+  box-shadow: variables.$box-shadow;
+  padding: variables.$spacing-base;
 }
 
 @mixin hover-effect {
-  transition: $transition-base;
+  transition: variables.$transition-base;
 
   &:hover {
     transform: translateY(-2px);
-    box-shadow: $box-shadow-large;
+    box-shadow: variables.$box-shadow-large;
   }
 }
