--- a/src/assets/styles/mixins.scss
+++ b/src/assets/styles/mixins.scss
@@ -42,22 +42,26 @@
 
 // Typography
 @mixin heading-1 {
-  font-size: variables.$font-size-xxlarge;
-  font-weight: bold;
-  line-height: 1.2;
+  & {
+    font-size: variables.$font-size-xxlarge;
+    font-weight: bold;
+    line-height: 1.2;
 
-  @include respond-to(md) {
-    font-size: variables.$font-size-xlarge;
+    @include respond-to(md) {
+      font-size: variables.$font-size-xlarge;
+    }
   }
 }
 
 @mixin heading-2 {
-  font-size: variables.$font-size-xlarge;
-  font-weight: bold;
-  line-height: 1.3;
+  & {
+    font-size: variables.$font-size-xlarge;
+    font-weight: bold;
+    line-height: 1.3;
 
-  @include respond-to(md) {
-    font-size: variables.$font-size-large;
+    @include respond-to(md) {
+      font-size: variables.$font-size-large;
+    }
   }
 }
 
